# TULIP

./: .gitignore  CITATION.cff  QUICK_START.md  README.md  TESTING.md  pre_push_check.sh  pyproject.toml  quick_test.sh
src/tulip/: __init__.py  cli.py  config.py  mcp_server.py  security.py
src/tulip/mcp_client_configs/: __init__.py  setup_lmstudio.py
tests/: __init__.py  test_config.py  test_security.py
