[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tulip-mcp"
dynamic = ["version"]
description = "TULIP: Tool for UMCdb Language Interface and Processing - Secure MCP server for AmsterdamUMCdb via local LLMs"
requires-python = ">=3.10"
authors = [
    { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
    { name = "Pedro Moreira", email = "pedrojfm@mit.edu" },
    { name = "Rajna Fani", email = "rajnaf@mit.edu" },
]
maintainers = [
    { name = "Rafi Al Attrach", email = "rafiaa@mit.edu" },
    { name = "Pedro Moreira", email = "pedrojfm@mit.edu" },
    { name = "Rajna Fani", email = "rajnaf@mit.edu" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "amsterdamumcdb",
    "umcdb", 
    "icu",
    "clinical-data", 
    "mcp", 
    "llm", 
    "medical", 
    "healthcare", 
    "bigquery",
    "omop-cdm",
    "datathon",
    "van-gogh",
    "esicm",
    "lmstudio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.9.0",  # CLI framework
    "rich>=13.0.0",  # Rich output for CLI
    "pandas>=2.0.0",  # Data manipulation
    "fastmcp>=0.1.0",  # MCP server functionality
    "google-cloud-bigquery>=3.0.0",  # BigQuery client (required - no local storage)
    "db-dtypes>=1.0.0",  # BigQuery data types
    "sqlparse>=0.4.0",  # SQL parsing for security validation
    "pyjwt[crypto]>=2.8.0",  # JWT token handling
    "cryptography>=41.0.0",  # Cryptographic operations
    "python-jose[cryptography]>=3.3.0",  # JWT support
    "httpx>=0.24.0",  # HTTP client for OAuth2
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.10.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
# TULIP CLI and MCP server
tulip = "tulip.cli:app"
tulip-mcp = "tulip.mcp_server:main"  # Primary MCP entry point (enables `uvx tulip-mcp`)

[project.urls]
Homepage = "https://github.com/[your-username]/TULIP"
Repository = "https://github.com/[your-username]/TULIP"
Documentation = "https://github.com/[your-username]/TULIP#readme"
Issues = "https://github.com/[your-username]/TULIP/issues"
Changelog = "https://github.com/[your-username]/TULIP/releases"
"AmsterdamUMCdb" = "https://amsterdammedicaldatascience.nl/"
"ESICM Datathon" = "https://www.esicm.org/"

[tool.pdm.version]
source = "file"
path = "src/tulip/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort (import sorting)
    "UP", # pyupgrade (modernize syntax)
    "RUF",# Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (let ruff-format handle line length)
]

[tool.ruff.format]
# Ruff's default formatter will be used.

[tool.ruff.lint.isort]
known-first-party = ["tulip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.*",
]
